--- a/OEBPS/Styles/stylesheet.css
+++ b/OEBPS/Styles/stylesheet.css
@@ -165,3 +165,13 @@ table td {
   border: #b9ccf9 1px solid;
   letter-spacing: 0;
 }
+.font-img {
+  border: 0;
+  vertical-align: middle;
+  height: 17.6px;
+}
+.font-zhu-img {
+  border: 0;
+  vertical-align: middle;
+  height: 12px;
+}
